tests/snapshots/conformance__y_number_after_space.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[ 4]
stdout --- 
[4]
stderr --- 
<empty>
