tests/snapshots/conformance__y_number_double_close_to_zero.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[-0.000000000000000000000000000000000000000000000000000000000000000000000000000001]

stdout --- 
[-0.000000000000000000000000000000000000000000000000000000000000000000000000000001]
stderr --- 
<empty>
