tests/snapshots/conformance__y_number_int_with_exp.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[20e1]
stdout --- 
[20e1]
stderr --- 
<empty>
