tests/snapshots/conformance__y_number_negative_int.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[-123]
stdout --- 
[-123]
stderr --- 
<empty>
