tests/snapshots/conformance__y_number_negative_zero.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[-0]
stdout --- 
[-0]
stderr --- 
<empty>
