tests/snapshots/conformance__y_number_real_capital_e.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1E22]
stdout --- 
[1E22]
stderr --- 
<empty>
