tests/snapshots/conformance__y_number_real_exponent.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[123e45]
stdout --- 
[123e45]
stderr --- 
<empty>
