tests/snapshots/conformance__y_number_real_neg_exp.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1e-2]
stdout --- 
[1e-2]
stderr --- 
<empty>
